--- a/base.css
+++ b/base.css
@@ -14,6 +14,11 @@ body {
     background-color: initial;
 }
 
+vscode-body pre {
+    color: initial;
+    background: #f7f7f7 !important;
+}
+
 .vscode-body code {
     color: initial;
 }
