--- a/base.css
+++ b/base.css
@@ -14,7 +14,7 @@ body {
     background-color: initial;
 }
 
-vscode-body pre {
+.vscode-body pre {
     color: initial;
     background: #f7f7f7 !important;
 }
