--- a/base.css
+++ b/base.css
@@ -31,7 +31,7 @@ body {
     background: none
 }
 
-vscode-body table th,
+.vscode-body table th,
 .vscode-body table td {
     border: 1px solid #ddd !important;
 }
