Pull in more recent version of github styles

--- a/github-markdown.css
+++ b/github-markdown.css
@@ -8,38 +8,38 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   line-height: 1.5;
-  color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #24292e;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
 }
 
 .vscode-body .pl-c {
-  color: #969896;
+  color: #6a737d;
 }
 
 .vscode-body .pl-c1,
 .vscode-body .pl-s .pl-v {
-  color: #0086b3;
+  color: #005cc5;
 }
 
 .vscode-body .pl-e,
 .vscode-body .pl-en {
-  color: #795da3;
+  color: #6f42c1;
 }
 
 .vscode-body .pl-smi,
 .vscode-body .pl-s .pl-s1 {
-  color: #333;
+  color: #24292e;
 }
 
 .vscode-body .pl-ent {
-  color: #63a35c;
+  color: #22863a;
 }
 
 .vscode-body .pl-k {
-  color: #a71d5d;
+  color: #d73a49;
 }
 
 .vscode-body .pl-s,
@@ -49,69 +49,94 @@
 .vscode-body .pl-sr .pl-cce,
 .vscode-body .pl-sr .pl-sre,
 .vscode-body .pl-sr .pl-sra {
-  color: #183691;
+  color: #032f62;
 }
 
-.vscode-body .pl-v {
-  color: #ed6a43;
+.vscode-body .pl-v,
+.vscode-body .pl-smw {
+  color: #e36209;
 }
 
-.vscode-body .pl-id {
-  color: #b52a1d;
+.vscode-body .pl-bu {
+  color: #b31d28;
 }
 
 .vscode-body .pl-ii {
-  color: #f8f8f8;
-  background-color: #b52a1d;
+  color: #fafbfc;
+  background-color: #b31d28;
+}
+
+.vscode-body .pl-c2 {
+  color: #fafbfc;
+  background-color: #d73a49;
+}
+
+.vscode-body .pl-c2::before {
+  content: "^M";
 }
 
 .vscode-body .pl-sr .pl-cce {
   font-weight: bold;
-  color: #63a35c;
+  color: #22863a;
 }
 
 .vscode-body .pl-ml {
-  color: #693a17;
+  color: #735c0f;
 }
 
 .vscode-body .pl-mh,
 .vscode-body .pl-mh .pl-en,
 .vscode-body .pl-ms {
   font-weight: bold;
-  color: #1d3e81;
-}
-
-.vscode-body .pl-mq {
-  color: #008080;
+  color: #005cc5;
 }
 
 .vscode-body .pl-mi {
   font-style: italic;
-  color: #333;
+  color: #24292e;
 }
 
 .vscode-body .pl-mb {
   font-weight: bold;
-  color: #333;
+  color: #24292e;
 }
 
 .vscode-body .pl-md {
-  color: #bd2c00;
-  background-color: #ffecec;
+  color: #b31d28;
+  background-color: #ffeef0;
 }
 
 .vscode-body .pl-mi1 {
-  color: #55a532;
-  background-color: #eaffea;
+  color: #22863a;
+  background-color: #f0fff4;
+}
+
+.vscode-body .pl-mc {
+  color: #e36209;
+  background-color: #ffebda;
+}
+
+.vscode-body .pl-mi2 {
+  color: #f6f8fa;
+  background-color: #005cc5;
 }
 
 .vscode-body .pl-mdr {
   font-weight: bold;
-  color: #795da3;
+  color: #6f42c1;
 }
 
-.vscode-body .pl-mo {
-  color: #1d3e81;
+.vscode-body .pl-ba {
+  color: #586069;
+}
+
+.vscode-body .pl-sg {
+  color: #959da5;
+}
+
+.vscode-body .pl-corl {
+  text-decoration: underline;
+  color: #032f62;
 }
 
 .vscode-body .octicon {
@@ -189,12 +214,11 @@
 }
 
 .vscode-body a {
-  color: #4078c0;
+  color: #0366d6;
   text-decoration: none;
 }
 
-.vscode-body a:hover,
-.vscode-body a:active {
+.vscode-body a:hover {
   text-decoration: underline;
 }
 
@@ -208,7 +232,7 @@
   overflow: hidden;
   background: transparent;
   border: 0;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #dfe2e5;
 }
 
 .vscode-body hr::before {
@@ -305,23 +329,47 @@
 }
 
 .vscode-body code {
-  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 12px;
 }
 
 .vscode-body pre {
   margin-top: 0;
   margin-bottom: 0;
-  font: 12px Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-size: 12px;
 }
 
 .vscode-body .octicon {
   vertical-align: text-bottom;
 }
 
-.vscode-body input {
-  -webkit-font-feature-settings: "liga" 0;
-  font-feature-settings: "liga" 0;
+.vscode-body .pl-0 {
+  padding-left: 0 !important;
+}
+
+.vscode-body .pl-1 {
+  padding-left: 4px !important;
+}
+
+.vscode-body .pl-2 {
+  padding-left: 8px !important;
+}
+
+.vscode-body .pl-3 {
+  padding-left: 16px !important;
+}
+
+.vscode-body .pl-4 {
+  padding-left: 24px !important;
+}
+
+.vscode-body .pl-5 {
+  padding-left: 32px !important;
+}
+
+.vscode-body .pl-6 {
+  padding-left: 40px !important;
 }
 
 .vscode-body::before {
@@ -374,14 +422,14 @@
   height: 0.25em;
   padding: 0;
   margin: 24px 0;
-  background-color: #e7e7e7;
+  background-color: #e1e4e8;
   border: 0;
 }
 
 .vscode-body blockquote {
   padding: 0 1em;
-  color: #777;
-  border-left: 0.25em solid #ddd;
+  color: #6a737d;
+  border-left: 0.25em solid #dfe2e5;
 }
 
 .vscode-body blockquote>:first-child {
@@ -397,13 +445,13 @@
   padding: 3px 5px;
   font-size: 11px;
   line-height: 10px;
-  color: #555;
+  color: #444d56;
   vertical-align: middle;
-  background-color: #fcfcfc;
-  border: solid 1px #ccc;
-  border-bottom-color: #bbb;
+  background-color: #fafbfc;
+  border: solid 1px #c6cbd1;
+  border-bottom-color: #959da5;
   border-radius: 3px;
-  box-shadow: inset 0 -1px 0 #bbb;
+  box-shadow: inset 0 -1px 0 #959da5;
 }
 
 .vscode-body h1,
@@ -424,7 +472,7 @@
 .vscode-body h4 .octicon-link,
 .vscode-body h5 .octicon-link,
 .vscode-body h6 .octicon-link {
-  color: #000;
+  color: #1b1f23;
   vertical-align: middle;
   visibility: hidden;
 }
@@ -450,13 +498,13 @@
 .vscode-body h1 {
   padding-bottom: 0.3em;
   font-size: 2em;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #eaecef;
 }
 
 .vscode-body h2 {
   padding-bottom: 0.3em;
   font-size: 1.5em;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #eaecef;
 }
 
 .vscode-body h3 {
@@ -473,7 +521,7 @@
 
 .vscode-body h6 {
   font-size: 0.85em;
-  color: #777;
+  color: #6a737d;
 }
 
 .vscode-body ul,
@@ -506,7 +554,7 @@
   margin-top: 16px;
   font-size: 1em;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .vscode-body dl dd {
@@ -521,22 +569,22 @@
 }
 
 .vscode-body table th {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .vscode-body table th,
 .vscode-body table td {
   padding: 6px 13px;
-  border: 1px solid #ddd;
+  border: 1px solid #dfe2e5;
 }
 
 .vscode-body table tr {
   background-color: #fff;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid #c6cbd1;
 }
 
 .vscode-body table tr:nth-child(2n) {
-  background-color: #f8f8f8;
+  background-color: #f6f8fa;
 }
 
 .vscode-body img {
@@ -545,13 +593,21 @@
   background-color: #fff;
 }
 
+.vscode-body img[align=right] {
+  padding-left: 20px;
+}
+
+.vscode-body img[align=left] {
+  padding-right: 20px;
+}
+
 .vscode-body code {
   padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
   margin: 0;
   font-size: 85%;
-  background-color: rgba(0,0,0,0.04);
+  background-color: rgba(27,31,35,0.05);
   border-radius: 3px;
 }
 
@@ -590,7 +646,7 @@
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  background-color: #f7f7f7;
+  background-color: #f6f8fa;
   border-radius: 3px;
 }
 
@@ -611,57 +667,29 @@
   content: normal;
 }
 
-.vscode-body .pl-0 {
-  padding-left: 0 !important;
-}
-
-.vscode-body .pl-1 {
-  padding-left: 3px !important;
-}
-
-.vscode-body .pl-2 {
-  padding-left: 6px !important;
-}
-
-.vscode-body .pl-3 {
-  padding-left: 12px !important;
-}
-
-.vscode-body .pl-4 {
-  padding-left: 24px !important;
-}
-
-.vscode-body .pl-5 {
-  padding-left: 36px !important;
-}
-
-.vscode-body .pl-6 {
-  padding-left: 48px !important;
-}
-
 .vscode-body .full-commit .btn-outline:not(:disabled):hover {
-  color: #4078c0;
-  border: 1px solid #4078c0;
+  color: #005cc5;
+  border-color: #005cc5;
 }
 
 .vscode-body kbd {
   display: inline-block;
   padding: 3px 5px;
-  font: 11px Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font: 11px "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   line-height: 10px;
-  color: #555;
+  color: #444d56;
   vertical-align: middle;
-  background-color: #fcfcfc;
-  border: solid 1px #ccc;
-  border-bottom-color: #bbb;
+  background-color: #fafbfc;
+  border: solid 1px #d1d5da;
+  border-bottom-color: #c6cbd1;
   border-radius: 3px;
-  box-shadow: inset 0 -1px 0 #bbb;
+  box-shadow: inset 0 -1px 0 #c6cbd1;
 }
 
 .vscode-body :checked+.radio-label {
   position: relative;
   z-index: 1;
-  border-color: #4078c0;
+  border-color: #0366d6;
 }
 
 .vscode-body .task-list-item {
