Always use light scrollbars

--- a/base.css
+++ b/base.css
@@ -47,3 +47,13 @@ body {
 .vscode-body.showEditorSelection .code-line .code-line:hover:before {
 	border-left: none;
 }
+
+body.vscode-body::-webkit-scrollbar {
+    background-color: white;
+}
+body.vscode-body::-webkit-scrollbar-thumb {
+    background-color: rgba(100, 100, 100, 0.4);
+}
+body.vscode-body::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(100, 100, 100, 0.7);
+}
