--- a/github-markdown.css
+++ b/github-markdown.css
@@ -147,7 +147,6 @@
 
 .vscode-body a {
   background-color: transparent;
-  -webkit-text-decoration-skip: objects;
 }
 
 .vscode-body a:active,
@@ -170,10 +169,6 @@
 
 .vscode-body img {
   border-style: none;
-}
-
-.vscode-body svg:not(:root) {
-  overflow: hidden;
 }
 
 .vscode-body code,
@@ -537,6 +532,10 @@
   margin-bottom: 0;
 }
 
+.vscode-body li {
+  word-wrap: break-all;
+}
+
 .vscode-body li>p {
   margin-top: 16px;
 }
@@ -602,19 +601,11 @@
 }
 
 .vscode-body code {
-  padding: 0;
-  padding-top: 0.2em;
-  padding-bottom: 0.2em;
+  padding: 0.2em 0.4em;
   margin: 0;
   font-size: 85%;
   background-color: rgba(27,31,35,0.05);
   border-radius: 3px;
-}
-
-.vscode-body code::before,
-.vscode-body code::after {
-  letter-spacing: -0.2em;
-  content: "\00a0";
 }
 
 .vscode-body pre {
@@ -660,11 +651,6 @@
   word-wrap: normal;
   background-color: transparent;
   border: 0;
-}
-
-.vscode-body pre code::before,
-.vscode-body pre code::after {
-  content: normal;
 }
 
 .vscode-body .full-commit .btn-outline:not(:disabled):hover {
