--- a/base.css
+++ b/base.css
@@ -7,7 +7,8 @@ body {
     min-width: 200px;
     max-width: 980px;
     margin: 0 auto;
-    padding: 45px;
+    padding: 40px;
+    border: 1px solid transparent;
 }
 
 .vscode-body blockquote {
