Re-run build script in WSL

--- a/github-markdown.css
+++ b/github-markdown.css
@@ -1,4 +1,4 @@
-/* Generated from 'node_modules\github-markdown-css\github-markdown-light.css' */
+/* Generated from 'node_modules/github-markdown-css/github-markdown-light.css' */
 .vscode-body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -899,7 +899,7 @@
   filter: invert(50%);
 }
 
-/* Generated from 'node_modules\github-markdown-css\github-markdown-dark.css' */
+/* Generated from 'node_modules/github-markdown-css/github-markdown-dark.css' */
 .vscode-body.vscode-dark {
   color-scheme: dark;
   -ms-text-size-adjust: 100%;
